--- a/src/Template.Api/Properties/launchSettings.json
+++ b/src/Template.Api/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5043",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "dev"
       }
     },
     "https": {
@@ -16,7 +16,7 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7135;http://localhost:5043",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "dev"
       }
     }
   }
