--- a/src/Template.Application/Template.Application.csproj
+++ b/src/Template.Application/Template.Application.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Template.Core\Template.Core.csproj" />
+  </ItemGroup>
+
 </Project>
